--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,9 @@
 .idea/*.iml
 .idea/modules
 .idea/encodings.xml
-.idea/misc
+.idea/misc.xml
 .idea/vcs.xml
+.idea/sbt.xml
 
 # CMake
 cmake-build-*/
@@ -68,3 +69,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+
+output/
+src/META-INF/
